2009-11-05  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/utils.c (gnat_type_for_mode): Handle vector modes.

2009-11-05  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/trans.c (lvalue_required_p) <N_Unchecked_Conversion>:
	New case.

2009-10-30  Eric Botcazou  <ebotcazou@adacore.com>

	* gcc-interface/utils.c (MAX_FIXED_MODE_SIZE): Delete.
	(create_field_decl): Update description.  In a packed record, round
	the size up to a byte boundary only if the field's type has BLKmode.
	* gcc-interface/gigi.h (create_field_decl): Update description.

2009-10-30  Emmanuel Briot  <briot@adacore.com>

	* make.adb (Start_Compile_If_Possible): Compute location of resulting
	ALI file in this procedure instead of after the compilation itself,
	since the current directory might have changed in between when using
	-j<n>.

	* osint.ads: Addded missing alignment clause.

	* adaint.c, adaint.h, osint.adb (__gnat_reset_attributes,
	__gnat_size_of_file_attributes): Rename reset_attributes and
	size_of_file_attributes.

2009-10-30  Javier Miranda  <miranda@adacore.com>

	* sem_scil.adb (Adjust_SCIL_Node): Add missing management of sequences
	of statements when searching for SCIL nodes.

2009-10-30  Tristan Gingold  <gingold@adacore.com>

	* gnatlink.adb, link.c: By default use shared libgcc on darwin.

2009-10-30  Emmanuel Briot  <briot@adacore.com>

	* make.adb, osint.adb (Add_Lib_Search_Dir): Do not add if dir is
	already in the list.
	This saves system calls when looking for ALI files
	(Scan_Make_Args): The parameter to gnatmake's -D is now converted to an
	absolute PATH (so that the above improvement properly occurs if both
	-D<dir> and -aO<dir> are specified).

2009-10-30  Thomas Quinot  <quinot@adacore.com>

	* a-direct.adb: Minor reformatting

2009-10-30  Emmanuel Briot  <briot@adacore.com>

	* make.adb, adaint.c, adaint.h, osint.adb, osint.ads, bcheck.adb
	(*_attr): new subprograms.
	(File_Length, File_Time_Stamp, Is_Writable_File): new subprograms