@@ -1,3 +1,7 @@
+2009-11-08  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/rep_clause4.adb: New test.
+
 2009-11-08  Richard Guenther  <rguenther@suse.de>
 
 	PR rtl-optimization/41928
